jabref: update arguments in launch script